Config for boring cyborg auto labeling
Why:

 * action/labeler does not work for pull-request when the PR is on a fork
 * attempted using paulfnatom/periodic-labler but it fails with other
   permission issues https://github.com/paulfantom/periodic-labeler/issues/6

This change addreses the need by:

 * enable use of https://github.com/kaxil/boring-cyborg which supports same label
   syntax. It also has more features but just using the labeling feature for now.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ pr:
       - dco.txt
       - .github/ISSUE_TEMPLATE/*.md
       - .github/labeler.yml
+      - .github/boring-cyborg.yml
       - .github/workflows/*
       - .dependabot/config.yml
 
