add arc, devtools and infra labeling

--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -124,6 +124,11 @@ labelPRBasedOnFilePath:
         - integration-tests/infinispan-cache-jpa/**/*
         - integration-tests/infinispan-client/**/*
         - integration-tests/infinispan-embedded/**/*
+     area/infra-automation:
+        - .github/**/*
+        - azure-mvn-settings.xml
+        - azure-pipelines.yml
+        - ci-templates/**/*
     area/jaeger:
         - extensions/jaeger/**/*
     area/jaxb:
