Use quarkus with Google Cloud Run And CloudSQL

--- a/extensions/agroal/deployment/src/test/resources/application-gcp-datasource.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-gcp-datasource.properties
@@ -15,4 +15,5 @@ quarkus.datasource.max-lifetime=57
 quarkus.datasource.transaction-isolation-level=serializable
 quarkus.datasource.new-connection-sql=create schema if not exists schema_default
 quarkus.datasource.socket-factory=com.google.cloud.sql.postgres.SocketFactory
-quarkus.datasource.additional-jdbc-properties=cloud-sql-instance=project:zone:db-name,randomProperty=myProperty
+quarkus.datasource.additional-jdbc-properties.cloudSqlInstance=project:zone:instance-name
+quarkus.datasource.additional-jdbc-properties.randomProperty=myProperty
