--- a/extensions/agroal/deployment/src/test/resources/application-default-datasource.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-default-datasource.properties
@@ -14,3 +14,6 @@ quarkus.datasource.idle-removal-interval=56
 quarkus.datasource.max-lifetime=57
 quarkus.datasource.transaction-isolation-level=serializable
 quarkus.datasource.new-connection-sql=create schema if not exists schema_default
+quarkus.datasource.socket-factory=pass socket factory provider as jdbc property
+quarkus.datasource.additional-jdbc-properties.extraProperty1=extraProperty1Value
+quarkus.datasource.additional-jdbc-properties.extraProperty2=extraProperty2Value
