--- a/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/pom.xml
+++ b/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/pom.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>org.acme</groupId>
-    <artifactId>grand-parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <artifactId>my-ext-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>My Ext - Parent</name>
+
     <packaging>pom</packaging>
     <properties>
-        <quarkus.version>0.19.0</quarkus.version>
-        <rest-assured.version>3.3.0</rest-assured.version>
+        <quarkus.version>999-SNAPSHOT</quarkus.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
     </properties>
-
     <modules>
-        <module>integration-tests</module>
-        <module>itest</module>
+        <module>deployment</module>
+        <module>runtime</module>
     </modules>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -28,11 +29,11 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${compiler-plugin.version}</version>
                 </plugin>
