--- a/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/runtime/pom.xml
+++ b/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/runtime/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.acme</groupId>
-        <artifactId>my-project-minimal-extension-parent</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <artifactId>my-ext-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>my-project-minimal-extension</artifactId>
-    <name>Minimal Extension - Runtime</name>
+    <artifactId>my-ext</artifactId>
+    <name>My Ext - Runtime</name>
 
     <dependencies>
         <dependency>
