Add hazelcast-client extension
Reformat README.MD

Remove @author

Add hazelcast-client to pipelines

Move hazelcast-client-yaml to src/main/resources

Create 'hazelcast-client' FeatureBuildItem

Move 'runtime' classes into 'runtime' package

Reuse quarkus-jaxb

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -377,6 +377,7 @@ jobs:
           - category: Cache
             timeout: 30
             test-modules: >
+              hazelcast-client
               infinispan-cache-jpa
               infinispan-client
               infinispan-embedded
