--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -361,6 +361,7 @@ stages:
             - infinispan-cache-jpa
             - infinispan-client
             - infinispan-embedded
+            - hazelcast-client
             - cache
           name: cache
 
