--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -25,6 +25,7 @@
         <module>shared-library</module>
         <module>hibernate-validator</module>
         <module>common-jpa-entities</module>
+        <module>hazelcast-client</module>
         <module>infinispan-client</module>
         <module>infinispan-embedded</module>
         <module>main</module>
