--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -18,6 +18,7 @@
         <module>common</module>
         <module>h2</module>
         <module>derby</module>
+        <module>hazelcast</module>
         <module>kubernetes-client</module>
         <module>junit5-internal</module>
         <module>junit5</module>
