--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Cache Maven Repository
       id: cache-maven
       uses: actions/cache@v1
+      with:  
         path: ~/.m2/repository
         # Improves the reusability of the cache to limit key changes
         key: ${{ runner.os }}-maven-${{ hashFiles('bom/runtime/pom.xml') }}
