--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -38,13 +38,14 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      image: postgres:10.5
-      env:
-        POSTGRES_USER: hibernate_orm_test 
-        POSTGRES_PASSWORD: hibernate_orm_test 
-        POSTGRES_DB: hibernate_orm_test 
-      ports:
-      - 5432:5432
+      postgres:
+        image: postgres:10.5
+        env:
+          POSTGRES_USER: hibernate_orm_test 
+          POSTGRES_PASSWORD: hibernate_orm_test 
+          POSTGRES_DB: hibernate_orm_test 
+        ports:
+        - 5432:5432
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
