--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: maven-repo
-        path: ${{ $HOME/.m2/repository }}
+        path: ${{HOME}}/.m2/repository
     - name: Cleanup Cache
       shell: bash
       run: |
