--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: maven-repo
-        path: ${{ env['thehome'] }}
+        path: ${{ env.HOME }}/.m2/repository
     - name: Cleanup Cache
       shell: bash
       run: |
