--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -23,8 +23,9 @@ jobs:
         # Improves the reusability of the cache to limit key changes
         key: ${{ runner.os }}-maven-${{ hashFiles('bom/runtime/pom.xml') }}
         restore-keys: ${{ runner.os }}-maven-
-#    - name: Build
-#      run: mvn -e -B --settings azure-mvn-settings.xml -DskipTests=true -Dno-format -DskipDocs clean install
+    - name: Build
+      #run: mvn -e -B --settings azure-mvn-settings.xml -DskipTests=true -Dno-format -DskipDocs clean install
+      run: mvn io.quarkus:quarkus-maven-plugin:1.1.1.Final:list-extensions
     - name: Persist Maven Repo
       uses: actions/upload-artifact@v1
       with:
