--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -8,8 +8,8 @@ jobs:
     name: "JDK 8 Build"
     runs-on: ubuntu-latest
     steps:
-    - run:   echo ::set-env name=HOME::$HOME
-      shell: bash
+  #  - run:   echo ::set-env name=HOME::$HOME
+  #    shell: bash
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1 
@@ -26,11 +26,14 @@ jobs:
     - name: Build
       #run: mvn -e -B --settings azure-mvn-settings.xml -DskipTests=true -Dno-format -DskipDocs clean install
       run: mvn io.quarkus:quarkus-maven-plugin:1.1.1.Final:list-extensions
+    - name: Tar Maven Repo
+      shell: bash
+      run: (cd ~; tar czvf maven-repo.tgz .m2/repository)
     - name: Persist Maven Repo
       uses: actions/upload-artifact@v1
       with:
         name: maven-repo
-        path: ${{ env.HOME }}/.m2/repository
+        path: maven-repo.tgz
     - name: Cleanup Cache
       shell: bash
       run: |
@@ -60,6 +63,9 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: maven-repo
-        path: $HOME/.m2/repository
+        path: maven-repoo.tgz
+    - name: Extract Maven Repo
+      shell: bash
+      run: (cd ~; tar xzvf maven-repo.tgz)
     - name: Build with Maven
       run: mvn -pl integration-tests/main -B --settings azure-mvn-settings.xml -Dquarkus.native.container-build=true -Dtest-postgresql -Dtest-elasticsearch -Dtest-keycloak -Ddocker-keycloak -Dtest-dynamodb -Dtest-mysql -Dtest-vault -Dtest-neo4j -Dnative-image.xmx=6g -Dnative -Dno-format
